<resources>
    <string name="app_name">Visio</string>
    <string name="map_key">AIzaSyBKBUtPMCQKpHeJjU9C1GZ2Ga-vXWnWurY</string>
    <string name="service_text">By continuing, you agree to accept our</string>
    <string name="policy_terms"><![CDATA[Privacy Policy & Terms of Service.]]></string>
    <string name="sign_in">Sign In</string>
    <string name="add_your_info_to_login">Add your info to login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up_capital">SIGN UP</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_your_info_to_sign_up">Add your info to sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="collection_1">Collection 1</string>
    <string name="previous_collections">Previous Collections</string>
    <string name="done">Done</string>
    <string name="log_gps">Log GPS</string>
    <string name="next">Next</string>
    <string name="id_2">ID 2</string>
    <string name="id_3">ID 3</string>

    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="akshita_compass">AKSHITA COMPASS</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>

    <string name="label_x_axis">X-Axis:</string>
    <string name="label_y_axis">Y-Axis:</string>
    <string name="label_z_axis">Z-Axis:</string>
    <string name="value_default">0.0</string>


    //shapable image corner

    <style name="ShapeAppearanceOverlay.App.CornerSize10Percent10Percent" parent="">
        <item name="cornerSize">7%</item>
    </style>
</resources>